# GoogleBrainCaptureHackathon

./: .gitignore  Bhutan Data.code-workspace  Dockerfile  Makefile  README.md  app.py  braincapture_data_loader.ipynb  bucket_demo.py  cloudbuild.yaml  config.ini  dataLoadTest.ipynb  dataLoadTest.py  dataViz.py  data_loader_demo.ipynb  gcp_deployment.md  generate_latent_representations.ipynb  groupEval.py  knn.py  labelFunctions.py  loaderFunctions.py  model_test.ipynb  preprocessFunctions.py  pyproject.toml  requirements.txt  tuh.py
.github/workflows/: docker_build_streamlit_app.yaml  validate_docker_app_image.yaml
app/: app.py
assets/logos/: logos.md
conf/: deep1010.py
data/: data.md
model/: __init__.py  classifiers.py  model.py
notebooks/: access_bucket.ipynb  train_binary_model.ipynb
scorer/: groupEval.py  mergeScores.py
scorer/data/applications/: applications.csv
src/data/: data_processing.py  processing.py
src/data/conf/: eeg_annotations.py  eeg_channel_order.py  eeg_channel_picks.py
src/data/utils/: eeg.py
src/deployment/: app.py
src/visualisation/: visualisation.py
unsupervised/: knn.py
utils/: __init__.py  data_processing.py  deep1010.py  eeg.py
